Fix accounts filters field alignment

--- a/src/assets/scss/components/_grid.scss
+++ b/src/assets/scss/components/_grid.scss
@@ -60,4 +60,16 @@
 	&.gap-y-xlg {
 		row-gap: 70px;
 	}
+
+	.self-start {
+		align-self: flex-start;
+	}
+
+	.self-center {
+		align-self: center;
+	}
+
+	.self-bottom {
+		align-self: flex-end;
+	}
 }
